# TIM

./: CMakeLists.txt  build.sh
.claude/skills/generate_amrex_code/: SKILL.md  lessons.md
.github/workflows/: build_cmake_gnu.yml  coupler.yml  lint_fms.yml  whitespace-check.yml
.testing/: trailer.py
cmake/: TIMConfig.cmake.in
cpp/: tim_chksum_c.cpp  tim_coms_infra.cpp  tim_coms_infra.hpp  tim_coms_infra_C_API.h  tim_coms_infra_f.F90
mom/cpp/: CMakeLists.txt  mom_continuity_ppm.cpp  mom_continuity_ppm.hpp  mom_continuity_ppm_kernel.hpp  mom_interface_heights.cpp  mom_interface_heights.hpp  mom_interface_heights_kernel.hpp  turbotmp_bridge_c_types.h  turbotmp_mom_continuity_ppm_bridge.cpp  turbotmp_mom_continuity_ppm_bridge.h  turbotmp_mom_interface_heights_bridge.cpp  turbotmp_mom_interface_heights_bridge.h
mpp/include/: mpp_comm_mpi.inc  mpp_group_update.fh  mpp_transmit.inc  mpp_transmit_mpi.fh  mpp_transmit_nocomm.fh
test_mom/: CMakeLists.txt  test_mom_main.cpp
test_mom/boundary/: CMakeLists.txt  test_boundary_exchange.cpp
test_mom/cmake/: add_mpi_test.cmake
test_mom/common/: CMakeLists.txt  amrex_assertions.cpp  amrex_assertions.hpp  captured_io.cpp  captured_io.hpp  data_dir.hpp
test_mom/mom_continuity_ppm/: CMakeLists.txt  test_mom_continuity_ppm.cpp
tim/cpp/: tim_coms_infra.cpp  tim_coms_infra.hpp  tim_coms_infra_C_API.cpp  tim_coms_infra_C_API.h  tim_profile.cpp  tim_profile.hpp
tim/fortran/: tim_coms_infra_interface.F90
turbotmp/: turbotmp_helper.cpp  turbotmp_helper.hpp
